--- a/client/index.html
+++ b/client/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite App</title>
+<!--    <script src="https://cdn.tailwindcss.com"></script>-->
+    <title>React-web3-tailwind</title>
   </head>
   <body>
     <div id="root"></div>
